[gd_scene load_steps=4 format=3 uid="uid://cfbwq12ftxynb"]

[ext_resource type="Script" path="res://game/screens/planning/Planning.gd" id="1_2p7qq"]
[ext_resource type="PackedScene" uid="uid://dncwwspw7amnl" path="res://game/screens/player_data/PlayerData.tscn" id="2_51eol"]
[ext_resource type="PackedScene" uid="uid://sot1sh52ti65" path="res://menus/options_menu/OptionsMenu.tscn" id="3_ruld5"]

[node name="PlanningScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2p7qq")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="PlanningDisplayContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PlanningDisplayContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="ViewPanelMarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/PlanningDisplayContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ViewPanel" type="Panel" parent="MarginContainer/VBoxContainer/PlanningDisplayContainer/HBoxContainer2/ViewPanelMarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlayerDataMarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/PlanningDisplayContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="PlayerData" parent="MarginContainer/VBoxContainer/PlanningDisplayContainer/HBoxContainer2/PlayerDataMarginContainer" instance=ExtResource("2_51eol")]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlanningInteractionContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ShoppingGridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/PlanningInteractionContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 4

[node name="GroceriesButton" type="Button" parent="MarginContainer/VBoxContainer/PlanningInteractionContainer/ShoppingGridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Groceries"

[node name="DepartmentStoreButton" type="Button" parent="MarginContainer/VBoxContainer/PlanningInteractionContainer/ShoppingGridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Kitchen Upgrades"

[node name="RecipeBookButton" type="Button" parent="MarginContainer/VBoxContainer/PlanningInteractionContainer/ShoppingGridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Recipe Book"

[node name="PlanningGridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/PlanningInteractionContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 20
columns = 3

[node name="RestaurantButton" type="Button" parent="MarginContainer/VBoxContainer/PlanningInteractionContainer/PlanningGridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Review"

[node name="ShoppingButton" type="Button" parent="MarginContainer/VBoxContainer/PlanningInteractionContainer/PlanningGridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Shop & Upgrade"

[node name="StartDayButton" type="Button" parent="MarginContainer/VBoxContainer/PlanningInteractionContainer/PlanningGridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Start Day"

[node name="RestaurantGridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/PlanningInteractionContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 20
columns = 2

[node name="ProvisionsButton" type="Button" parent="MarginContainer/VBoxContainer/PlanningInteractionContainer/RestaurantGridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Provisions"

[node name="KitchenUpdatesButton" type="Button" parent="MarginContainer/VBoxContainer/PlanningInteractionContainer/RestaurantGridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Kitchen Upgrades
"

[node name="UpgradesButton" type="Button" parent="MarginContainer/VBoxContainer/PlanningInteractionContainer/RestaurantGridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Misc. Upgrades"

[node name="PlanningOptionsContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/PlanningOptionsContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 25
text = "Back"

[node name="OptionsButton" type="Button" parent="MarginContainer/VBoxContainer/PlanningOptionsContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 25
text = "Options"

[node name="OptionsMenu" parent="." instance=ExtResource("3_ruld5")]
title = "Options"
visible = false
borderless = false
always_on_top = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/PlanningInteractionContainer/ShoppingGridContainer/GroceriesButton" to="." method="_on_food_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/PlanningInteractionContainer/ShoppingGridContainer/DepartmentStoreButton" to="." method="_on_department_store_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/PlanningInteractionContainer/ShoppingGridContainer/RecipeBookButton" to="." method="_on_recipe_book_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/PlanningInteractionContainer/PlanningGridContainer/RestaurantButton" to="." method="_on_restaurant_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/PlanningInteractionContainer/PlanningGridContainer/ShoppingButton" to="." method="_on_shopping_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/PlanningInteractionContainer/PlanningGridContainer/StartDayButton" to="." method="_on_start_day_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/PlanningOptionsContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/PlanningOptionsContainer/OptionsButton" to="." method="_on_options_button_pressed"]
